  * Moved FormatJsonString() to StringFormatExtensions and JsonString.Format()
  * Moved Guard from AllOverIt.Helpers to AllOverIt.Assert
  * Renamed AllOverIt.Tasks to AllOverIt.Async
  * Added EnrichedEnum<T> type

AllOverIt.Validation - v1.1.0
  * Rebuilt against AllOverIt v1.20.0 due to breaking changes

AllOverIt.Aws.Cdk.AppSync - v0.17.0
  * Updated to Amazon.CDK.AWS.AppSync v1.129.0
  * Renamed namespace Datasources to DataSources

AllOverIt.Evaluator - v3.1.0
  * Internal improvements to reduce memory allocations
  * Added conditional and comparison methods: IF, EQ, NE, LT, LTE, GT, GTE
  * Rebuilt against AllOverIt v1.20.0 due to breaking changes

AllOverIt.GenericHost - v1.3.0
  * Rebuilt against AllOverIt v1.20.0 due to breaking changes

AllOverIt.Aws.AppSync.Client - v0.6.0
  * Rebuilt against AllOverIt v1.20.0 due to breaking changes

AllOverIt.AspNetCore - v1.0.0
  * New project
  * Provides an input formatter (JsonConverter) and model binder for EnrichedEnum types.



19 Oct 2021
======================================================================================================================
AllOverIt - v1.19.1
  * Added SelectAsync() for .NET Standard 2.1 and above



14 Oct 2021
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync - v0.16.0
  * Updated to Amazon.CDK.AWS.AppSync v1.127.0
  * Added CurrentPageCursor to IPageInfo



08 Oct 2021
======================================================================================================================
AllOverIt - v1.19.0
  * BREAKING CHANGE - Renamed ObjectPropertySerializationHelper to ObjectPropertySerializer and refactored it to
    accept an options class. Added the ability to filter properties and values, as well as change the serialized
    property value. The associated extension method ObjectExtensions.ToSerializedDictionary() has been refactored