@@ -13,10 +13,10 @@ namespace BasicValidation.Validators
 
             // methods starting with IsXXX are extension methods provided by AllOverIt.Validation
             RuleFor(person => person.Age).IsGreaterThan(21);
-            RuleFor(person => person.Age).IsNotNullOrEmpty();       // same as checking for a default (zero) value
-            RuleFor(person => person.FirstName).IsNotNullOrEmpty();
+            RuleFor(person => person.Age).IsNotEmpty();       // same as checking for a default (zero) value
+            RuleFor(person => person.FirstName).IsNotEmpty();
             RuleFor(person => person.FirstName).IsRequired();
-            RuleFor(person => person.LastName).IsNotNullOrEmpty();
+            RuleFor(person => person.LastName).IsNotEmpty();
             RuleFor(person => person.LastName).IsRequired();
         }
     }
